--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,8 @@
         </activity>
         <activity android:name=".RegisterActivity" />
         <activity android:name=".RestaurantActivity" />
-        <activity android:name=".PostCommentActivity"></activity>
+        <activity android:name=".PostCommentActivity" />
+        <activity android:name=".CommentOnRestauActivity"></activity>
     </application>
 
 </manifest>
